--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<name>pg_java</name>
-	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
+	<url>https://github.com/davidaventimiglia/pg_java</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
