--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,15 @@
 		<developerConnection>scm:git:ssh:git@github.com:davidaventimiglia/pg_java.git</developerConnection>
 		<url>https://github.com/davidaventimiglia/pg_java/tree/master</url>
 	</scm>
-	
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>neptunestation-org</name>
+			<url>https://maven.pkg.github.com/neptunestation-org/pg_java</url>
+		</repository>
+	</distributionManagement>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
