--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.neptunestation</groupId>
-  <artifactId>pg_java</artifactId>
+  <artifactId>pg_query.java</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>This Java library uses the actual PostgreSQL server source to parse SQL queries and return the internal PostgreSQL parse tree.</description>
-  <url>https://github.com/davidaventimiglia/pg_java</url>
+  <url>https://github.com/neptunestation-org/pg_query.java</url>
 
   <licenses>
     <license>
@@ -30,16 +30,16 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git:git@github.com:davidaventimiglia/pg_java.git</connection>
-    <developerConnection>scm:git:ssh:git@github.com:davidaventimiglia/pg_java.git</developerConnection>
-    <url>https://github.com/davidaventimiglia/pg_java/tree/master</url>
+    <connection>scm:git:git:git@github.com:neptunestation-org/pg_query.java.git</connection>
+    <developerConnection>scm:git:ssh:git@github.com:neptunestation-org/pg_query.java.git</developerConnection>
+    <url>https://github.com/neptunestation-org/pg_query.java/tree/master</url>
   </scm>
 
   <distributionManagement>
     <repository>
       <id>github</id>
       <name>neptunestation-org</name>
-      <url>https://maven.pkg.github.com/neptunestation-org/pg_java</url>
+      <url>https://maven.pkg.github.com/neptunestation-org/pg_query.java</url>
     </repository>
   </distributionManagement>
 
