Renamed the project from pg_java to pg_query.java

--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 	      <arguments>
 		<argument>-java</argument>
 		<argument>-package</argument>
-		<argument>org.neptunestation.pg_java</argument>
+		<argument>org.neptunestation.pg_query.java</argument>
 		<argument>-outdir</argument>
 		<argument>${project.build.directory}/generated-sources</argument>
 		<argument>-o</argument>
