--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.4.1</version>
+	<configuration>
+          <doclint>none</doclint>
+	   <sourcepath>${project.build.directory}/generated-sources</sourcepath>
+	</configuration>
       </plugin>
     </plugins>
   </reporting>
