--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
 	<version>0.12</version>
 	<configuration>
           <message>Creating site for ${project.version}</message>
-	  <server>github-pages</server>
+	  <server>github</server>
 	</configuration>
 	<executions>
           <execution>
